--- a/index.html
+++ b/index.html
@@ -25,17 +25,18 @@
 						<div class="content">
 							<div class="inner">
 								<h1 style="font-size:45px" >Christian Flores</h1>
-								<p style="font-size:18px" >Astronomy Graduate Student at the University of Hawaii at Manoa</p>
-								<p style="font-size:18px" >Research assistant at the NASA Infrared Telescope Facility</p>
+								<p style="font-size:18px" >Postdoctoral Research Fellow at ASIAA</p>
+								<p style="font-size:18px" >Former PhD Student at Univeristy of Hawaii at Manoa</p>
+								<p style="font-size:18px" >RESEARCH ASSISTANT AT THE NASA INFRARED TELESCOPE FACILITY</p>
 
 							</div>
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">Intro</a></li>
 								<li><a href="#Research">Research</a></li>
 								<li><a href="#publications">Publications</a></li>
 								<li><a href="#CV">CV</a></li>
+								<li><a href="#intro">Bio</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -47,28 +48,26 @@
 
 						<!-- Intro -->
 							<article id="intro">
-								<h2 class="major">Intro</h2>
+								<h2 class="major">Bio</h2>
 								<span class="image main"><img src="images/volcan.jpg" alt="" /></span>
-								<p>I am a Chilean graduate student at the university of Hawaii at Manoa.
-									 In 2014 I graduated with a Bachelor of Science from Universidad de Chile,
-									 and in 2015 my wife and I moved to Hawaii so I could pursue a graduated
-									 degreen in Astronomy. We lived in the beautiful island of Oahu, where I obtained
-									 a Master of Science in 2017, and later that year we moved to the neighbour island
-									 of Hawaii (a.k.a the Big Island) where we currently reside.</p>
-								<p>Living in Hawaii has been a dream, we have loved every aspect of it, its wonderful weather,
-									its nature, and the good friends and people we have met here. </p>
+								<p>
+									I currently live in Taipei, Taiwan, where I work as a Postdoctoral Researcher at the
+									Academia Sinica Institute of Astronomy and Astrophysics (ASIAA). At ASIAA I mainly work
+									with Nagayoshi Ohashi and Sienny Shang on ALMA observations of protostellar sources.
+									I got my PhD from the university of Hawaii at Manoa, where I worked with Michael Connelley
+									and Bo Reipurth. During this time, I also worked with Jonathan Williams and Adwin Boogert
+									on shorter scales research projects. In 2014 I graduated with a Bachelor of Science from Universidad
+									de Chile.</p>
 								<p>I consider myself as a very active person whom likes playing sports, trying new things, and
 									always wants to learn somehing new. Some of the activities I have enjoyed in my life are Salsa and
-									Bachata dancing (link to classes?), Snorkeling, contact sports such as Taekwondo and Kick Boxing. I
+									bachata dancing, learning mandarin Chinese, snorkeling, contact sports such as Taekwondo and Kick Boxing. I
 									really enjoy teaching, I have been a physics and math instructor for many years, and I even attempted
 									teaching lating dance classes.
 								    </p>
 								<p> I got interested in science and astronomy when I was in high school. I was absolutely
 									fascinated wih the mysteries of the universe, and I thought that uncovering those mysteries
 								was the coolest thing ever. Although I was mostly attracted by the math and physcis behind these
-							phenomenon, I have recently gotten very interested in the beauty of observational astronomy. Indeed,
-							with some help from my wife and my friend and advisor Mike Connelley, we have refurbished two
-							small telescopes that we use to do amateur observing in the night skies of the Big Island.
+							phenomenon, I have recently gotten very interested in the beauty of observational astronomy.
 						</p>
 							</article>
 
@@ -77,7 +76,7 @@
 								<h2 class="major">Research</h2>
 								<p>My research interest are mainly star and planet formation. I would like to understand
 								the effects of magnetic fields in low-mass young stars and how the star and the disk affect
-							  each other at the earliest stages of planet formation.  </p>
+							  each other at the earliest stages of planet formation. </p>
 
 								<h3 class="major">Star formation and evolution</h3>
 								<span class="image main"><img src="images/HindsVariable.jpg" alt="" /></span>
@@ -119,56 +118,98 @@
 									<p>A list with a brief summary of my publication is as follow:</p>
 									<h3 class="major">First Author Publications</h3>
 										<ul>
-										<li> 	<strong> The Effects and Implications of Starspots on Young Stars: A Spectroscopic View (in prep.) </strong></li>
-										<span class="image main"><img src="images/Temperature_difference_vs_optical_color_Bfield_two_panels.png" alt="" /></span>
-										<p>A brief description</p>
+											<ol type="1">
+												<li> 	<strong>
+													iSHELL K-band Survey of Class I and Flat Spectrum Sources:
+													Magnetic field measurements in the protostellar phase (2024, submitted) </strong></li>
+												<span class="image main"><img src="images/Flores2024-fig1.jpeg" alt="" /></span>
+												<p> We performed the first magnetic field strength survey of Class I and Flat Spectrum (FS) sources using
+												K-band observations with iSHELL. We model the photospheric absorption lines of
+											34 Class I and FS sources and measure their magnetic field strengths, K-band temperatures, and gravities.
+										  We put the physical properties of Class I and FS sources in context by comparing them to the values derived
+											for a sample of Class II sources. As shown in the image, the average gravity of Class I and FS objects
+											is lower than the average gravity of Class II sources, however, a significant overlap between both gravity
+											distributions exist. Using evolutionary models we show that the average gravity of Class I and FS sources is
+										 0.6 Myrs, significantly younger than the average age of Class II sources of 3 Myrs. Also, the average magnetic field
+										 strength of Class I and FS sources 〈B〉 = 1.8 ± 0.10 kG is comparable to the average magnetic field of Class II sources.
+									   Our results confirm that protostellar sources host strong magnetic fields on their photospheres and they likely accrete
+										 disk material through a magnetosphere similar to their more evolved T Tauri counterparts.</p>
+
+												<li> 	<strong> <a href="https://ui.adsabs.harvard.edu/abs/2023ApJ...958...98F/abstract">
+													Early Planet Formation in Embedded Disks (eDisk). XII. Accretion Streamers, Protoplanetary Disk,
+													and Outflow in the Class I Source Oph IRS 63 (2023 ApJ) </strong></li>
+												<span class="image main"><img src="images/Flores2023-new-fig.jpeg" alt="" /></span>
+												<p> We present ALMA observations of the Class I source Oph IRS63 in the context of the Early Planet
+													Formation in Embedded Disks (eDisk) large program. Our ALMA observations of Oph IRS63 show
+													a myriad of protostellar features, such as a shell-like bipolar outflow (in 12CO), an extended rotating
+													envelope structure (in 13CO), a streamer connecting the envelope to the disk (in C18O), and several
+													small-scale spiral structures seen towards the edge of the dust continuum (in SO). On the left image, I show
+												the beatiful outflow detected in CO, which shows shell-like structures. On the right image, I show a very
+											intriguing spiral and ring-like structure detected in SO.</p>
+
+											<li> 	<strong> <a href="https://ui.adsabs.harvard.edu/abs/2022ApJ...925...21F/abstract">
+												The Effects of Starspots on Spectroscopic Mass Estimates of Low-mass Young Stars (2022 ApJ) </strong></li>
+											<span class="image main"><img src="images/Flores2022-Fig1.png" alt="" /></span>
+											<p>Magnetic fields and mass accretion processes create dark and bright spots on the surface of young stars.
+												These spots manifest as surface thermal inhomogeneities, which alter the global temperature measured on the stars.
+												To understand the effects and implications of these starspots, we conducted a large iSHELL high-resolution infrared
+												 spectroscopic survey of T Tauri stars in Taurus-Auriga and Ophiuchus star-forming regions. Our main results
+												 are that 1) there is a systematic temperature difference between optical and infrared observation (left panel)
+											 and 2) that a positive correlation between our measured magnetic field strengths and the temperature differences (right panel).
+										  The discrepant temperature measurements imply significant differences in the inferred stellar masses for these young stars.
+											In this article paper, we use results from ALMA observations to discern which temperature is really tracing the effetive
+											temperature of these largely spotted stars.</p>
 
 
-										<li> <strong> The Anatomy of an Unusual Edge-on Protoplanetary Disk. II: Gas temperature and a warm outer region (2020, submitted) </strong></li>
-										<span class="image main"><img src="images/TRD_temperature_12CO_and_13CO_new_beams.png" alt="" /></span>
-										<p>We present high-resolution 12CO and 13CO 2 - 1 ALMA observations of the highly-inclined protoplanetary disk
-											around SSTC2D J163131.2-242627. We apply a modified version of the Topographically Reconstructed
-											Distribution method presented by Dutrey et al. (2017) to derive the temperature structure of the disk.
-											CO is clearly detected from two surface layers separated by a midplane region in which CO emission is suppressed,
-											as expected from freeze-out in the cold midplane. Outside of R > 200 au, the midplane temperature of the disk increases
-											with a nearly vertically isotermal profile. The transition in CO temperature coincides in position with
-											a dramatic reduction in the sub-micron and sub-millimeter emission from the disk. We interpret this
-											phenomenon as interstellar UV radiation providing an additional source of heating to the outer part
-											of the disk.
-										</p>
+											<li> <strong> <a href="https://ui.adsabs.harvard.edu/abs/2021AJ....161..239F/abstract">
+												The Anatomy of an Unusual Edge-on Protoplanetary Disk. II: Gas temperature and a warm outer region (2021 AJ) </strong></li>
+											<span class="image main"><img src="images/TRD_temperature_12CO_and_13CO_new_beams.png" alt="" /></span>
+											<p>We present high-resolution 12CO and 13CO 2 - 1 ALMA observations of the highly-inclined protoplanetary disk
+												around SSTC2D J163131.2-242627. We apply a modified version of the Topographically Reconstructed
+												Distribution method presented by Dutrey et al. (2017) to derive the temperature structure of the disk.
+												CO is clearly detected from two surface layers separated by a midplane region in which CO emission is suppressed,
+												as expected from freeze-out in the cold midplane. Outside of R > 200 au, the midplane temperature of the disk increases
+												with a nearly vertically isotermal profile. The transition in CO temperature coincides in position with
+												a dramatic reduction in the sub-micron and sub-millimeter emission from the disk. We interpret this
+												phenomenon as interstellar UV radiation providing an additional source of heating to the outer part
+												of the disk.
+											</p>
 
 
-										<li> <strong> <a href="https://ui.adsabs.harvard.edu/abs/2020ApJ...898..109F/abstract">Is T Tauri North a "Classical" T Tauri Star? (2020)</a></strong></li>
-										<span class="image main"><img src="images/HRD_Feiden_magnetic_combined_figure_in_blue_200505.png" alt="" /></span>
-										<p>We present high-resolution H- and K-band spectroscopic observations of the archetypal T Tauri star T Tau North.
-										We find that the IR temperature derived from our work is ~800 K cooler than optical temperature derived in the literatture.
-										This temperature difference is interpreted as cool or hot spots, or both, covering a significant part of the surface of T Tau N. The gravity derived
-										for T Tau N is lower than the gravity of nearly every other star in a sample of 24 classical
-										T Tauri stars in Taurus. Combining these temperature and gravity results with magnetic stellar evolutionary
-										models, we find the age of T Tau N to be less than 1 Myr old. These results suggest that T Tau N is in an earlier
-										evolutionary stage than most classical T Tauri stars in Taurus, arguing that it is a protostar ejected from the
-										embedded southern binary system shortly after its formation.</p>
+											<li> <strong> <a href="https://ui.adsabs.harvard.edu/abs/2020ApJ...898..109F/abstract">
+												Is T Tauri North a "Classical" T Tauri Star? (2020 ApJ)</a></strong></li>
+											<span class="image main"><img src="images/HRD_Feiden_magnetic_combined_figure_in_blue_200505.png" alt="" /></span>
+											<p>We present high-resolution H- and K-band spectroscopic observations of the archetypal T Tauri star T Tau North.
+											We find that the IR temperature derived from our work is ~800 K cooler than optical temperature derived in the literatture.
+											This temperature difference is interpreted as cool or hot spots, or both, covering a significant part of the surface of T Tau N. The gravity derived
+											for T Tau N is lower than the gravity of nearly every other star in a sample of 24 classical
+											T Tauri stars in Taurus. Combining these temperature and gravity results with magnetic stellar evolutionary
+											models, we find the age of T Tau N to be less than 1 Myr old. These results suggest that T Tau N is in an earlier
+											evolutionary stage than most classical T Tauri stars in Taurus, arguing that it is a protostar ejected from the
+											embedded southern binary system shortly after its formation.</p>
 
 
-  									<li> <strong><a href="https://ui.adsabs.harvard.edu/abs/2019ApJ...882...75F/abstract">Measuring the Magnetic Field of
-											Young Stars Using iSHELL Observations: BP Tau and V347 Aur (2019)</a></strong></li>
-											<span class="image main"><img src="images/BP_Tau_and_V347_Aur.jpeg" alt="" /></span>
-											<p>We present stellar parameters and magnetic field strength measurements of BP Tau and V347 Aur, both young stars
-												observed with the near-infrared spectrograph iSHELL. For BP Tau, we measure a surface magnetic field strength of
-												2.5 kG literature results. For this star, however, we obtain a much lower temperature value than previous optical studies
-												(dT~ 400 K) and interpret this significant temperature difference as due to the relatively higher impact of
-												starspots at near-infrared wavelengths than at optical wavelengths. We further apply this technique to the class I
-												protostellar source V347 Aur and measure for the first time its magnetic field strength of 1.35 kG
-												and its surface gravity log g= 3.25. Lastly, we combine our measurements with pre-main-sequence stellar
-												evolutionary models and illustrate the effects produced by starspots on the retrieved masses and ages of young
-												stars.</p>
-
+	  									<li> <strong><a href="https://ui.adsabs.harvard.edu/abs/2019ApJ...882...75F/abstract">Measuring the Magnetic Field of
+												Young Stars Using iSHELL Observations: BP Tau and V347 Aur (2019 ApJ)</a></strong></li>
+												<span class="image main"><img src="images/BP_Tau_and_V347_Aur.jpeg" alt="" /></span>
+												<p>We present stellar parameters and magnetic field strength measurements of BP Tau and V347 Aur, both young stars
+													observed with the near-infrared spectrograph iSHELL. For BP Tau, we measure a surface magnetic field strength of
+													2.5 kG literature results. For this star, however, we obtain a much lower temperature value than previous optical studies
+													(dT~ 400 K) and interpret this significant temperature difference as due to the relatively higher impact of
+													starspots at near-infrared wavelengths than at optical wavelengths. We further apply this technique to the class I
+													protostellar source V347 Aur and measure for the first time its magnetic field strength of 1.35 kG
+													and its surface gravity log g= 3.25. Lastly, we combine our measurements with pre-main-sequence stellar
+													evolutionary models and illustrate the effects produced by starspots on the retrieved masses and ages of young
+													stars.</p>
+											</ol>
 										</ul>
-									<h3 class="major">Co-author Publications</h3>
+									<h3 class="major">Selected co-author Publications</h3>
 
 										<ul>
-											<li> The Anatomy of an Unusual Edge-on Protoplanetary Disk I. Dust Settling in a Cold Disk (2020, submitted) </li>
-											<li> Observations of edge-on protoplanetary disks with ALMA I. Results from continuum data (2020, accepted)</li>
+											<li> Early Planet Formation in Embedded Disks (eDisk). I. Overview of the Program and First Results (2023)</li>
+											<li> A Highly Settled Disk around Oph163131 (2022)</li>
+											<li> The Anatomy of an Unusual Edge-on Protoplanetary Disk I. Dust Settling in a Cold Disk (2021) </li>
+											<li> Observations of edge-on protoplanetary disks with ALMA I. Results from continuum data (2020)</li>
 											<li> <a href="https://ui.adsabs.harvard.edu/abs/2019MNRAS.488.1005P/abstract">Upper limits on protolunar disc masses
 												using ALMA observations of directly imaged exoplanets (2019)</a></li>
 											<li> <a href="https://ui.adsabs.harvard.edu/abs/2018A%26A...617A..37C/abstract">Characterization of low-mass companion
