--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 							<ul>
 								<li><a href="#Research">Research</a></li>
 								<li><a href="#publications">Publications</a></li>
-								<li><a href="#CV">CV</a></li>
+								<!--<li><a href="#CV">CV</a></li>-->
 								<li><a href="#intro">Bio</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
