--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 						<div class="content">
 							<div class="inner">
 								<h1 style="font-size:45px" >Christian Flores</h1>
-								<p style="font-size:18px" >Postdoctoral Research Fellow at ASIAA</p>
-								<p style="font-size:18px" >Former PhD Student at Univeristy of Hawaii at Manoa</p>
-								<p style="font-size:18px" >RESEARCH ASSISTANT AT THE NASA INFRARED TELESCOPE FACILITY</p>
+								<p style="font-size:25px" >Postdoctoral Research Fellow at ASIAA</p>
+								<p style="font-size:15px" >Former PhD Student at the University of Hawaii at Manoa</p>
+								<p style="font-size:15px" >Former RESEARCH ASSISTANT AT THE NASA INFRARED TELESCOPE FACILITY</p>
 
 							</div>
 						</div>
@@ -35,9 +35,9 @@
 							<ul>
 								<li><a href="#Research">Research</a></li>
 								<li><a href="#publications">Publications</a></li>
-								<!--<li><a href="#CV">CV</a></li>-->
 								<li><a href="#intro">Bio</a></li>
 								<li><a href="#contact">Contact</a></li>
+								<li><a href="#CV">CV</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
@@ -231,11 +231,10 @@
 
 						<!-- CV -->
 							<article id="CV">
-								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<h2 class="major">CV</h2>
+								<!--  <span class="image main"><img src="images/pic03.jpg" alt="" /></span> -->
+								<p>Work in progress.</p>
 							</article>
-
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
