--- a/index.html
+++ b/index.html
@@ -49,80 +49,90 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Bio</h2>
-								<span class="image main"><img src="images/volcan.jpg" alt="" /></span>
+								<!-- <span class="image fit"><img src="images/volcan.jpg" alt="" /></span> -->
+								<img src="images/volcan.jpg" alt=""  class="image wrap" align="left"/>
 								<p>
-									I currently live in Taipei, Taiwan, where I work as a Postdoctoral Researcher at the
-									Academia Sinica Institute of Astronomy and Astrophysics (ASIAA). At ASIAA I mainly work
-									with Nagayoshi Ohashi and Sienny Shang on ALMA observations of protostellar sources.
-									I got my PhD from the university of Hawaii at Manoa, where I worked with Michael Connelley
-									and Bo Reipurth. During this time, I also worked with Jonathan Williams and Adwin Boogert
-									on shorter scales research projects. In 2014 I graduated with a Bachelor of Science from Universidad
-									de Chile.</p>
-								<p>I consider myself as a very active person whom likes playing sports, trying new things, and
-									always wants to learn somehing new. Some of the activities I have enjoyed in my life are Salsa and
-									bachata dancing, learning mandarin Chinese, snorkeling, contact sports such as Taekwondo and Kick Boxing. I
-									really enjoy teaching, I have been a physics and math instructor for many years, and I even attempted
-									teaching lating dance classes.
+									I currently reside in Taipei, Taiwan, working as a Postdoctoral Researcher at the Academia Sinica Institute
+									of Astronomy and Astrophysics (ASIAA). At ASIAA, I collaborate mainly with Nagayoshi Ohashi and Sienny Shang,
+									focusing on ALMA observations of protostellar sources. I earned my PhD from the University of Hawaii at Manoa,
+									where my work was supervised by Michael Connelley and Bo Reipurth. During this period, I also collaborated with
+									Jonathan Williams and Adwin Boogert on shorter-term research projects.</p>
+								<p>I consider myself an active person who enjoys playing sports, trying new things, and constantly learning.
+									I have enjoyed activities such as salsa and bachata dancing, learning Mandarin Chinese, snorkeling, and contact
+									sports like Taekwondo and Kick Boxing. I also have a passion for teaching, with many years of experience as a
+									physics and math instructor. I have even attempted teaching Latin dance classes.
 								    </p>
-								<p> I got interested in science and astronomy when I was in high school. I was absolutely
-									fascinated wih the mysteries of the universe, and I thought that uncovering those mysteries
-								was the coolest thing ever. Although I was mostly attracted by the math and physcis behind these
-							phenomenon, I have recently gotten very interested in the beauty of observational astronomy.
+								<p> My interest in science and astronomy began in high school. The mysteries of the universe fascinated me,
+									and I believed uncovering them was an extraordinary endeavor. Initially, the math and physics behind these
+									phenomena captivated me the most. However, during my PhD I developed a significant interest in the beauty
+									of observational astronomy.
 						</p>
 							</article>
 
 						<!-- Work -->
 							<article id="Research">
+
 								<h2 class="major">Research</h2>
 								<p>My research interest are mainly star and planet formation. I would like to understand
 								the effects of magnetic fields in low-mass young stars and how the star and the disk affect
 							  each other at the earliest stages of planet formation. </p>
 
 								<h3 class="major">Star formation and evolution</h3>
-								<span class="image main"><img src="images/HindsVariable.jpg" alt="" /></span>
 
-								<p> Stars younger than 1 Myr old are often called protostar, these stars are so embeded in their birth material
-								that they can sometimes only be accessed thorugh IR observations. I am interested in characterizing the stellar
-								properties of these stars such as temperature and gravity which allow us to indirectly learn about their masses
-								and ages. </p>
+								<img src="images/HindsVariable.jpg" align="left" class="image wrap" />
+								<p> Stars younger than 1 Myr old, often referred to as protostars, are typically
+									embedded within their birth material, making them accessible primarily through IR observations.
+									I am interested in characterizing their stellar properties, such as temperature and gravity.
+									This helps indirectly determine their masses and age, which in turn, allow us to understand
+									the growth and evolution of young stars. </p>
+
 								<h3 class="major">Magnetic fields</h3>
-								<span class="image main"><img src="images/magnetic_field_and_disk.jpg" alt="" /></span>
-								<p> Magnetic fields play a fundamental role in the formation and evolution of stars. These are,however,
-									often poorly understood and characterize. I have conducted measurements of magnetic fields in a sample of
-									~100 low-mass young stars, which will allow us to understand how the magnetic field change as the star evolve
-								from the highly embedded protostellar phase to the much older gas-starved phase. This research, could shed lights
-							  into the changes that stars themselves experience as they contract and evolve towards the main-sequence phase.</p>
+
+								<!-- <span class="image main"><img src="images/magnetic_field_and_disk.jpg" alt="" /></span> -->
+								<img src="images/magnetic_field_and_disk.jpg" align="left" class="image wrap" />
+								<p> Magnetic fields are fundamentally important in the formation and evolution of stars,
+									 but they are often poorly understood and characterized. I perform measurements of magnetic
+									 fields in young stars using high-resolution IR spectroscopy through the Zeeman effect.
+									 These observations provide insights into how magnetic fields influence the surface and internal
+									  structure of young stars. Additionally, the relationship between magnetic fields and stellar
+										properties allows us to investigate the origin of magnetism in stars.</p>
 
 								<h3 class="major">Protoplanetary disks</h3>
-								<span class="image main"><img src="images/protoplanetary_disks.jpg" alt="" /></span>
+								<!-- <span class="image main"><img src="images/protoplanetary_disks.jpg" alt="" /></span> -->
+								<img src="images/protoplanetary_disks.jpg" align="left" class="image wrap" />
 								<p>Protoplanetary disks are the birthsite of planets. They are proven to be highly complex when observed at sufficient
-								spatial resolution which could be itself a signpost of ongoing planet formation. I have performed hydrodynamical and
-								radiative transfer simulations of protoplanetary disk with the goal of understanding how planet formation looks-like
-								in real data, but also to understand the protoplanetary disk itself.</p>
+								spatial resolution which could be itself a signpost of ongoing planet formation. I study the physical
+								properties of these disks using (sub)mm ALMA observations. This enables us to characterize the amount of material
+								in the disks, providing insight into the mass available for planet formation and further stellar growth. </p>
 
 								<h3 class="major">Atmospheric telluric correction</h3>
-								<span class="image main"><img src="images/earth_amospheric_transparency.png" alt="" /></span>
-								<p>The earth atmosphere is opaque at discrete and continuous wavelengths thought the electromagnetic spectrum.
-									At IR wavelength it is customary to observe the so called A0 telluric standard stars to partially alliviate
-									the discrete flux reduction seen in the observed science spectra. As part of my job at the NASA Infrared Telescope
-									I helped to build a code that produces model spectra of the Earth’s transmission which reduce the need for taking
-									spectra of telluric standard stars. The process of producing synthetic atmospheric spectra has as ultimate goal
-									to incease the efficiency of the observatory by collecting more science spectra during the night and performed
-									the subsequent callibrations during the day.</p>
+								<!-- <span class="image main"><img src="images/earth_amospheric_transparency.png" alt="" /></span> -->
+								<img src="images/earth_amospheric_transparency.png" align="left" class="image wrap" />
+								<p>The Earth's atmosphere is opaque at both discrete and continuous wavelengths throughout the electromagnetic spectrum.
+									 In the IR wavelength, it is common to observe what are known as A0 telluric standard stars to partially alleviate the
+									discrete flux reduction seen in the observed science spectra. As part of my work at the NASA Infrared Telescope,
+									I helped build a code that produces model spectra of Earth’s transmission. This reduces the need for taking spectra of
+									telluric standard stars. The goal of producing synthetic atmospheric spectra is to increase the observatory's efficiency
+									by collecting more science spectra during the night and performing the subsequent calibrations during the day.</p>
 
 							</article>
+
+
 
 							<!-- publications -->
 								<article id="publications">
 									<h2 class="major">Publications</h2>
-									<p>A list with a brief summary of my publication is as follow:</p>
+									<p>A list with all my publications can be found in this <a href="https://ui.adsabs.harvard.edu/user/libraries/i0ORM-LATHSFx6eIJjqCMA">ADS link</a>.
+										A brief summary of my first author's publications is as follow:</p>
 									<h3 class="major">First Author Publications</h3>
 										<ul>
 											<ol type="1">
 												<li> 	<strong>
 													iSHELL K-band Survey of Class I and Flat Spectrum Sources:
 													Magnetic field measurements in the protostellar phase (2024, submitted) </strong></li>
-												<span class="image main"><img src="images/Flores2024-fig1.jpeg" alt="" /></span>
+													<p> </p>
+												<span class="image fit"><img src="images/Flores2024-fig1.jpeg" alt="" /></span>
+												<p> </p>
 												<p> We performed the first magnetic field strength survey of Class I and Flat Spectrum (FS) sources using
 												K-band observations with iSHELL. We model the photospheric absorption lines of
 											34 Class I and FS sources and measure their magnetic field strengths, K-band temperatures, and gravities.
@@ -137,8 +147,10 @@
 
 												<li> 	<strong> <a href="https://ui.adsabs.harvard.edu/abs/2023ApJ...958...98F/abstract">
 													Early Planet Formation in Embedded Disks (eDisk). XII. Accretion Streamers, Protoplanetary Disk,
-													and Outflow in the Class I Source Oph IRS 63 (2023 ApJ) </strong></li>
-												<span class="image main"><img src="images/Flores2023-new-fig.jpeg" alt="" /></span>
+													and Outflow in the Class I Source Oph IRS 63 (2023 ApJ) </a></strong></li>
+													<p> </p>
+												<span class="image fit"><img src="images/Flores2023-new-fig.jpeg" alt="" /></span>
+												<p> </p>
 												<p> We present ALMA observations of the Class I source Oph IRS63 in the context of the Early Planet
 													Formation in Embedded Disks (eDisk) large program. Our ALMA observations of Oph IRS63 show
 													a myriad of protostellar features, such as a shell-like bipolar outflow (in 12CO), an extended rotating
@@ -148,8 +160,10 @@
 											intriguing spiral and ring-like structure detected in SO.</p>
 
 											<li> 	<strong> <a href="https://ui.adsabs.harvard.edu/abs/2022ApJ...925...21F/abstract">
-												The Effects of Starspots on Spectroscopic Mass Estimates of Low-mass Young Stars (2022 ApJ) </strong></li>
-											<span class="image main"><img src="images/Flores2022-Fig1.png" alt="" /></span>
+												The Effects of Starspots on Spectroscopic Mass Estimates of Low-mass Young Stars (2022 ApJ) </a></strong></li>
+												<p> </p>
+											<span class="image fit"><img src="images/Flores2022-Fig1.png" alt="" /></span>
+											<p> </p>
 											<p>Magnetic fields and mass accretion processes create dark and bright spots on the surface of young stars.
 												These spots manifest as surface thermal inhomogeneities, which alter the global temperature measured on the stars.
 												To understand the effects and implications of these starspots, we conducted a large iSHELL high-resolution infrared
@@ -162,8 +176,10 @@
 
 
 											<li> <strong> <a href="https://ui.adsabs.harvard.edu/abs/2021AJ....161..239F/abstract">
-												The Anatomy of an Unusual Edge-on Protoplanetary Disk. II: Gas temperature and a warm outer region (2021 AJ) </strong></li>
-											<span class="image main"><img src="images/TRD_temperature_12CO_and_13CO_new_beams.png" alt="" /></span>
+												The Anatomy of an Unusual Edge-on Protoplanetary Disk. II: Gas temperature and a warm outer region (2021 AJ) </a></strong></li>
+												<p> </p>
+											<span class="image fit"><img src="images/TRD_temperature_12CO_and_13CO_new_beams.png" alt="" /></span>
+											<p> </p>
 											<p>We present high-resolution 12CO and 13CO 2 - 1 ALMA observations of the highly-inclined protoplanetary disk
 												around SSTC2D J163131.2-242627. We apply a modified version of the Topographically Reconstructed
 												Distribution method presented by Dutrey et al. (2017) to derive the temperature structure of the disk.
@@ -178,7 +194,9 @@
 
 											<li> <strong> <a href="https://ui.adsabs.harvard.edu/abs/2020ApJ...898..109F/abstract">
 												Is T Tauri North a "Classical" T Tauri Star? (2020 ApJ)</a></strong></li>
-											<span class="image main"><img src="images/HRD_Feiden_magnetic_combined_figure_in_blue_200505.png" alt="" /></span>
+												<p> </p>
+											<span class="image fit"><img src="images/HRD_Feiden_magnetic_combined_figure_in_blue_200505.png" alt="" /></span>
+											<p> </p>
 											<p>We present high-resolution H- and K-band spectroscopic observations of the archetypal T Tauri star T Tau North.
 											We find that the IR temperature derived from our work is ~800 K cooler than optical temperature derived in the literatture.
 											This temperature difference is interpreted as cool or hot spots, or both, covering a significant part of the surface of T Tau N. The gravity derived
@@ -191,7 +209,9 @@
 
 	  									<li> <strong><a href="https://ui.adsabs.harvard.edu/abs/2019ApJ...882...75F/abstract">Measuring the Magnetic Field of
 												Young Stars Using iSHELL Observations: BP Tau and V347 Aur (2019 ApJ)</a></strong></li>
-												<span class="image main"><img src="images/BP_Tau_and_V347_Aur.jpeg" alt="" /></span>
+												<p> </p>
+												<span class="image fit"><img src="images/BP_Tau_and_V347_Aur.jpeg" alt="" /></span>
+												<p> </p>
 												<p>We present stellar parameters and magnetic field strength measurements of BP Tau and V347 Aur, both young stars
 													observed with the near-infrared spectrograph iSHELL. For BP Tau, we measure a surface magnetic field strength of
 													2.5 kG literature results. For this star, however, we obtain a much lower temperature value than previous optical studies
@@ -230,12 +250,58 @@
 								</article>
 
 						<!-- CV -->
+
 							<article id="CV">
-								<h2 class="major">CV</h2>
+								<h2 class="major">Christian's Resume</h2>
+
+
+								<span class="image fit"><img src="Resume_CHRISTIAN_FLORES_Minimalist.jpeg" alt="" /></span>
+
 								<!--  <span class="image main"><img src="images/pic03.jpg" alt="" /></span> -->
-								<p>Work in progress.</p>
+								<p> </p>
+								<center>
+								<p>Here is a February 2024 version of my <a href="Resume _CHRISTIAN_FLORES_Minimalist.pdf">resume</a>.</p>
+
+								<p>Here is a February 2024 version of my <a href="Christian_Flores_CV_Feb_2024.pdf">CV</a>.</p>
+								</center>
 							</article>
 						<!-- Contact -->
+
+
+						<article id="contact">
+							<section>
+								<h2 class="major">Contact Information</h2>
+								<p>I am currently based in Taiwan at the Acadeia Sininica Institute of Astronomy and Astrophysics (ASIAA).</p>
+								<ul class="actions">
+									<li><a href="https://www.asiaa.sinica.edu.tw/" class="button">ASIAA Website</a></li>
+								</ul>
+							</section>
+							<section>
+								<!-- <h3>Etiam feugiat</h2> -->
+								<dl class="alt">
+									<dt>Address</dt>
+									<dd>11F of AS/NTU Astronomy-Mathematics Building, No.1, Sec. 4, </dd>
+									<dd> Roosevelt Rd, Taipei 10617, Taiwan, R.O.C.</dd>
+									<dt>ASIAA Phone</dt>
+									<dd>+886-2-3365-2200</dd>
+									<dt>Email</dt>
+									<dd><a href="#">caflores@asiaa.sinica.edu.tw</a></dd>
+									<dt>ASIAA personal webpage</dt>
+									<dd><a href="https://www.asiaa.sinica.edu.tw/people/cv.php?i=caflores">Christian Flores at ASIAA</a></dd>
+
+								</dl>
+
+								<!-- <ul class="icons"> -->
+									<!-- <li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li> -->
+									<!-- <li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li> -->
+									<!-- <li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li> -->
+									<!-- <li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li> -->
+									<!-- <li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li> -->
+								<!-- </ul> -->
+							</section>
+						</article>
+
+				<!--
 							<article id="contact">
 								<h2 class="major">Contact</h2>
 								<form method="post" action="#">
@@ -265,7 +331,7 @@
 									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</article>
-
+ 						-->
 						<!-- Elements -->
 							<article id="elements">
 								<h2 class="major">Elements</h2>
@@ -462,11 +528,11 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 										<div class="fields">
 											<div class="field half">
 												<label for="demo-name">Name</label>
-												<input type="text" name="demo-name" id="demo-name" value="" placeholder="Jane Doe" />
+												<input type="text" name="demo-name" id="demo-name" value="" placeholder="Christian Flores" />
 											</div>
 											<div class="field half">
 												<label for="demo-email">Email</label>
-												<input type="email" name="demo-email" id="demo-email" value="" placeholder="jane@untitled.tld" />
+												<input type="email" name="demo-email" id="demo-email" value="" placeholder="caflores@asiaa.sinica.edu.tw" />
 											</div>
 											<div class="field">
 												<label for="demo-category">Category</label>
