--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 						<article id="contact">
 							<section>
 								<h2 class="major">Contact Information</h2>
-								<p>I am currently based in Taiwan at the Acadeia Sininica Institute of Astronomy and Astrophysics (ASIAA).</p>
+								<p>I am currently based in Taiwan at the Academia Sinica Institute of Astronomy and Astrophysics (ASIAA).</p>
 								<ul class="actions">
 									<li><a href="https://www.asiaa.sinica.edu.tw/" class="button">ASIAA Website</a></li>
 								</ul>
