--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 											<ol type="1">
 												<li> 	<strong>
 													iSHELL K-band Survey of Class I and Flat Spectrum Sources:
-													Magnetic field measurements in the protostellar phase (2024, submitted) </strong></li>
+													Magnetic field measurements in the protostellar phase (2024, accepted ApJ) </strong></li>
 													<p> </p>
 												<span class="image fit"><img src="images/Flores2024-fig1.jpeg" alt="" /></span>
 												<p> </p>
