--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
 									<h3 class="major">First Author Publications</h3>
 										<ul>
 											<ol type="1">
-												<li> 	<strong>
+												<li> 	<strong><a href="https://ui.adsabs.harvard.edu/abs/2024ApJ...972..149F/abstract">
 													iSHELL K-band Survey of Class I and Flat Spectrum Sources:
-													Magnetic field measurements in the protostellar phase (2024, accepted ApJ) </strong></li>
+													Magnetic field measurements in the protostellar phase (2024 ApJ) </strong></li>
 													<p> </p>
 												<span class="image fit"><img src="images/Flores2024-fig1.jpeg" alt="" /></span>
 												<p> </p>
@@ -260,7 +260,7 @@
 								<!--  <span class="image main"><img src="images/pic03.jpg" alt="" /></span> -->
 								<p> </p>
 								<center>
-								<p>Here is a February 2024 version of my <a href="Resume _CHRISTIAN_FLORES_Minimalist.pdf">resume</a>.</p>
+								<p>Here is an October 2024 version of my <a href="Resume _CHRISTIAN_FLORES_Minimalist.pdf">resume</a>.</p>
 
 								<p>Here is a February 2024 version of my <a href="Christian_Flores_CV_Feb_2024.pdf">CV</a>.</p>
 								</center>
